﻿
This file is here just so I'm reminded to keep track of changes as I do em.


//===v1.00 - too lazy to add right now

//===v1.05 - same deal


//===v1.10

-Semi-major refactorings (file inclusion was changed around, behaviors hopefully shouldn't change)
-Fixed GetCalculatedEquippedWeight and GetBaseEquippedWeight expecting an int "minWeight" instead of a float.
-GetCalculatedEquippedWeight - Fixed nullptr issue (caused crashes if no weapon was equipped)
-GetCalculatedEquippedWeight - Fixed "Modify Light Items" adjustement not being calculated per-reference (used to only care about if the player had the effect)
-For GetCalculatedEquippedWeight / GetBaseEquippedWeight / GetNumBrokenEquippedItems:
	*Fixed items being counted multiple times if they had multiple equip slots.
	*Added two new flags: skipUnplayable and noQuestItems

-New Functions:
* SetShowOffDebugMode
* GetShowOffDebugMode


******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********